Treat {min,max,fit}-content block length values as initial.

The spec at
https://www.w3.org/TR/2018/WD-css-sizing-3-20180304/#sizing-values says
to treat the 'min-content', 'max-content' and 'fit-content' values as
the initial value of the property in question, if said property is a
block length property. In other words, these CSS values really only make
a difference in the inline direction.

This CL fixes that, both in the legacy engine and LayoutNG.

Removed such now-useless declarations in our internal code. This
includes a small change in how we do image documents. We'll now use
auto margins to correctly align the image flex item, rather than
align-items:center, so that the top edge of the image remains flush
with the top edge of the flex container, if the flex item (image)
becomes larger than the container. This used to be enforced by
min-height:min-content, but that obviously no longer works.

Bug: 902863, 926643
Change-Id: I8d4892a34bd907b6a0b2026d67570ae9c49cb456
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1599691
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#661787}

Former-commit-id: 3a0c4adda19bade345ca115fdcfe825acf0b8869